# bidderdb-utils

./: Dockerfile_1  Dockerfile_2  README.md  docker-compose.yml  dump.rdb  dynamo.py  pyproject.toml
bidVolume/data/: bidvolume.conf  dump.rdb
bidVolume/data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
blocked/data/: blocked.conf  dump.rdb
blocked/data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
campaign/data/: campaign.conf  dump.rdb
campaign/data/appendonlydir/: appendonly.aof.1.base.rdb
db/: date_utils.py
db/dynamodb/: Dockerfile  base.py
db/dynamodb/blocklist/: list_value_mapping.py  object_to_list_mapping.py
db/dynamodb/tables/: list_value_mapping_dev.py  object_to_list_mapping_dev.py  rtb_beeswax_spend_records_qa.py
db/integrationprod/: Dockerfile  main.py
db/integrationprod/setup/: 000_cleanup.sql  (+1 more)
device/data/: device.conf  dump.rdb  nodes.conf
dock/: config.sh  docker-compose-redis.yml
frequency/data/: dump.rdb  frequency.conf
member/data/: dump.rdb  member.conf
metadata/data/: dump.rdb  metadata.conf  nodes.conf
price/data/: dump.rdb  nodes.conf  price.conf
recency/data/: dump.rdb  nodes.conf  recency.conf
redis-config/: bidvolume.conf  blocked.conf  campaign.conf  device.conf  fix-cluster.sh  member.conf  metadata.conf  price.conf  segment.conf  settings.conf  spend.conf
segment/data/: dump.rdb  segment.conf
settings/data/: dump.rdb  nodes.conf  settings.conf
spend/data/: bid_volume.conf  blocked.conf  device.conf  dump.rdb  frequency.conf  nodes.conf  spend.conf
(+80 files in other folders)
