[tool.poetry]
name = "bidderdb-utils"
version = "0.1.0"
description = ""
authors = ["rahul parashar"]
readme = "README.md"
packages = [{include = "bidderdb_utils"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
pytz = "^2024.1"
boto3 = "^1.34.65"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
